# ClassicalStateMachineDesignPattern

./: CMakeLists.txt  LICENSE  README.md  classic_sm_config.json  main.cpp
src/: CMakeLists.txt  ModuleProgressReport.h  TransitionHandler.cpp
src/Config/: Config.h
src/Events/: Events.h
src/States/: States.h
